STB-4618 - Reactivate tracking page and audit page improvements and fixes